[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Hyeladzira <hyeladzira.sajou@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.10"
pandas = "^1.5.2"
jupyter = "^1.0.0"
requests = "^2.31.0"
pyarrow = "^14.0.2"
tqdm = "^4.66.1"
hopsworks = "^3.4.2"
plotly = "^5.18.0"
scikit-learn = "^1.3.2"
xgboost = "^2.0.3"
lightgbm = "^4.2.0"
optuna = "^3.5.0"
python-dotenv = "^1.0.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
